--- a/Demos/ViewsDemo/ViewsDemo.csproj
+++ b/Demos/ViewsDemo/ViewsDemo.csproj
@@ -126,10 +126,12 @@
     <Compile Include="Controllers\BindingController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +175,7 @@
     <Content Include="Views\Shared\Nyan.cshtml" />
     <Content Include="Views\Client\Index.cshtml" />
     <Content Include="Views\Binding\Index.cshtml" />
+    <Content Include="Views\Product\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
