Added AJAX demo

--- a/Demos/ViewsDemo/ViewsDemo.csproj
+++ b/Demos/ViewsDemo/ViewsDemo.csproj
@@ -126,6 +126,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AjaxDemoController.cs" />
     <Compile Include="Controllers\BindingController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -156,6 +157,8 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -182,6 +185,7 @@
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Shared\ServerInfo\ServerInfo.cshtml" />
     <Content Include="Views\Client\List.cshtml" />
+    <Content Include="Views\AjaxDemo\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
